Correct video thumbnail overlapping the date in the block

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /* Block */
-.ov-block-content img{ width: 100%; border: 1px solid #f1f1f1; position: absolute;}
+.ov-block-content img{ width: 100%; border: 1px solid #f1f1f1; }
 .ov-block-content .placeholder{
   width:100%;
   min-height: 200px;
